Athenz logo on scroll, fix content, update links, navbar collapsable, tiles resizing

--- a/css/style.css
+++ b/css/style.css
@@ -10,22 +10,18 @@ main {
     padding-top: 60px;
 }
 
+.fixed-top {
+    min-height: 60px;
+    background-color: #2A78CC;
+    border-bottom: 1px solid whitesmoke;
+}
+
 .grey-background {
     background: #F7F7F7;
 }
 
-.header {
-    height: 60px;
-    background-color: #2A78CC;
-    border-bottom: 1px solid whitesmoke;
-    overflow: hidden;
-}
-
 .logo {
-    margin: auto;
     color: #F2F2F2;
-    padding-left: 50px;
-    padding-top: 0.65rem;
 }
 
 .heading {
@@ -42,15 +38,20 @@ main {
     font-family: Helvetica;
     font-size: 16px;
     text-align: left;
+    padding-right: 1.15em;
 }
 
 .nav-item a {
     color: #F2F2F2;
 }
 
+.navbar-dark .navbar-nav .nav-link {
+    color: #F2F2F2;
+}
+
 .slider {
     background-image: url('../assets/banner.png');
-    min-height: 390px;
+    min-height: 350px;
     background-size: cover;
 }
 
@@ -77,6 +78,8 @@ main {
 
 .btn-documentation {
     width: 150px;
+    border-radius: 2px;
+    text-align: center;
 }
 
 .never-trust {
@@ -113,8 +116,12 @@ main {
 
 .features {
     color: #000;
-    margin-top: 20%;
-    margin-left: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    align-content: center;
 }
 
 .word-wrap {
@@ -130,18 +137,13 @@ main {
 }
 
 .architecture .details {
-    height: 80px;
+    height: 120px;
     -ms-text-overflow: ellipsis;
     text-overflow: ellipsis;
 }
 
-.features-row > .col-md {
-    min-height: 306px;
-
-}
-
 .line {
-    margin: 0;
+    margin: 10px 0;
     height: 4px;
     background: #F5A623;
     border: none;
@@ -156,10 +158,21 @@ main {
     margin: 0;
 }
 
-/*.features-row img {*/
-/*height: 100%;*/
-/*width: 100%;*/
-/*}*/
+.features-row {
+    /*margin: -15px;*/
+}
+
+.features-row img {
+    width: 100%;
+    height: 100%;
+    /*object-fit: contain;*/
+    /*width: calc(100% + 30px);*/
+    /*height: calc(100% + 30px);*/
+}
+
+.features-row > div {
+    height: 260px;
+}
 
 .rbac {
     font-size: 16px;
